# AI_EYE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  README_ja.md  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.mem_opt.esp32c2
components/78__esp-opus-encoder/: CMakeLists.txt  idf_component.yml  opus_decoder.cc  opus_encoder.cc  opus_resampler.cc  silk_resampler.h
components/blufi_wificfg/: CMakeLists.txt  Kconfig  blufi_init.c  blufi_log.h  blufi_security.c  blufi_wificfg.c  blufi_wificfg.h
components/espressif__esp_codec_dev/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  audio_codec_sw_vol.c  audio_codec_sw_vol.h  esp_codec_dev.c  esp_codec_dev_if.c  esp_codec_dev_vol.c  idf_component.yml
components/espressif__esp_lcd_gc9a01/: CMakeLists.txt  README.md  esp_lcd_gc9a01.c  idf_component.yml
components/helix/: CMakeLists.txt  idf_component.yml
components/helix/libhelix-mp3/: assembly.h
components/vb6824/: CMakeLists.txt  Kconfig  https.c  idf_component.yml  vb6824.c  vb6824.h  vb_ota.h
components/vb6824/assets/: update.html
docs/: build_and_config.md  otto_servo_mapping.md
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  background_task.cc  background_task.h  idf_component.yml  main.cc  mcp_server.cc  mcp_server.h  ota.cc  ota.h  settings.cc  settings.h  system_info.cc  system_info.h
main/audio_codecs/: audio_codec.cc  audio_codec.h  box_audio_codec.cc  box_audio_codec.h  es8311_audio_codec.cc  es8311_audio_codec.h  es8374_audio_codec.cc  es8374_audio_codec.h  es8388_audio_codec.cc  es8388_audio_codec.h  (+4 more)
output/: calib_succ.p3  start_calib.p3
scripts/: audio_debug_server.py  flash.sh  gen_lang.py  release.py  versions.py
(+531 files in other folders)
